CardGameDBSites.Frontend/app/assets/css/tailwind.css
/*! @import */
@tailwind base;
@tailwind components;
@tailwind utilities;

h1 {
    @apply text-4xl;
    @apply font-bold;
}

h2 {
    @apply text-3xl;
    @apply font-bold;
}

h3 {
    @apply text-2xl;
    @apply font-bold;
}

h4 {
    @apply text-xl;
    @apply font-bold;
}

h5{
    @apply text-lg;
    @apply font-bold;
}

a:not(.no-underline) {
    @apply border-dotted;
    @apply border-b;
    @apply border-black;
}

a:hover{
    @apply border-solid;
}

ul {
    @apply list-disc;
    margin-left: 18px;
}

.content p{
    @apply mb-3;
}

.row {
    display: flex;
    flex-wrap: wrap;
    width: 100%;
}

.hamburger {
    display: block;
    float: right;
}

.hamburger div {
    position: relative;
    width: 2em;
    height: 5px;
    border-radius: 3px;
    background-color: #fff;
    transition: all 0.3s ease-in-out;
}

.top-bun {
    transform-origin: 0% 0%;
    transition: transform 0.4s ease-in-out;
}

.meat {
    transition: transform 0.2s ease-in-out;
    margin-top: 8px;
}

.bottom-bun {
    transform-origin: 0% 100%;
    transition: transform 0.4s ease-in-out;
    margin-top: 8px;
}

nav + .container{
    @apply pt-8;
}

.keyword-icon{
    @apply inline-block;
}

#squad-panel {
    height: calc(100vh - 56px);
}

.full-without-header {
    height: calc(100vh - 56px);
}

#squad-panel.scrolled {
    height: 100vh;
}

@layer components {
    .bg-main-color {
        background-color: var(--main-color);
    }

    .bg-main-color-hover {
        background-color: var(--main-color-hover);
    }

    .border-main-color {
        border-color: var(--main-color);
    }

    .border-nav-color {
        border-color: var(--nav-border-color);
    }

    .bg-checked {
        background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M12.207 4.793a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0l-2-2a1 1 0 011.414-1.414L6.5 9.086l4.293-4.293a1 1 0 011.414 0z'/%3e%3c/svg%3e");
    }
}

body {
  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 14px;
  line-height: 1.4;
  color: #000;

  @apply bg-gray-100;
}

.scrollbar::-webkit-scrollbar {
    width: 0.375rem !important;
}

.scrollbar::-webkit-scrollbar-thumb{
    --tw-bg-opacity: 1 !important;
    background-color: rgb(203 213 225 / var(--tw-bg-opacity)) !important;
    border-radius: 0.25rem !important;
}

.wiggle:hover {
    animation: wiggle .3s linear 1 normal
}

@keyframes wiggle {
    0% {
        transform: rotate(0)
    }

    25% {
        transform: rotate(1deg)
    }

    50% {
        transform: rotate(0)
    }

    75% {
        transform: rotate(-1deg)
    }

    to {
        transform: rotate(0)
    }
}

